infra/base/crm/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smarterp-crm-route
  namespace: smarterp
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
  hostnames:
    - "crm.etsoo.cn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: smarterp-crm
          port: 8080
